--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Ordo'Nombres'</title>
+        <title>Ordo'Nombres</title>
         <meta
             name="description"
             content="Cette application web permet aux élèves de s'entraîner/évaluer au classement des nombres dans l'ordre croissant/décroissant."
